# codex

codex-rs/: Cargo.toml
codex-rs/coinflip-cli/: Cargo.toml
codex-rs/coinflip-cli/src/: main.rs
codex-rs/docs/: coinflip.md
codex-rs/programs/coinflip/: Anchor.toml  Cargo.toml
codex-rs/programs/coinflip/src/: lib.rs
