[package]
name = "coinflip-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0"
solana-sdk = "1.16.1"
coinflip = { path = "../programs/coinflip" }